<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="company_profile">ملف الشركة</string>
    <string name="company_profile_details">"الشركة الانجليزيه للنقل الجماعى هي شركة مساهمة مصرية و تعد أكبر شركه A.R.M لنقل الركاب بمصر حيث تمثل أكثر من ٤٥% من إجمالي المواصلات فى مصر و لديها أوسع شبكة مواصلات بالقاهرة الكبرى والتى تضم القاهرة و الجيزه و القليوبية ،و أيضاً بمحافظة الغربية. "</string>
    <string name="company_goal_details">"النهوض بمنظومة النقل الجماعى لتقديم مواصلات حضارية و بيئية و اقتصادية تعمل بأنظمة الدفع الذكى والوقود ومصادر الطاقه النظيفه وذلك لتوفير مزيد من الخدمات و الراحة و الأمان للمواطن المصرى. "</string>
    <string name="company_goal">هدفنا</string>
    <string name="about_us">عنا</string>
</resources>